# zenoh-perf

./: .gitignore  Cargo.toml
.github/workflows/: push.yml
binding-perfs/zenoh-c/: CMakeLists.txt
bindings/: README.md  analyze-latency.py  analyze-throughput.py  analyze.py  build.sh  justfile  test-c.sh  test-cpp.sh  test-python.sh  tokio.patch  zenoh-c-cmake.patch  zenoh-cpp-cmake.patch
bindings/config/: peer-connect.json5  peer-listen-tx1.json5  peer-listen.json5
bindings/zenoh-c/src/: zenoh_ping.c  zenoh_pong.c  zenoh_pub_thr.c  zenoh_sub_thr.c
bindings/zenoh-cpp/: CMakeLists.txt
bindings/zenoh-cpp/src/: z_ping.cxx  z_pong.cxx  z_pub_thr.cxx  z_sub_thr.cxx  zenoh_ping.cxx  zenoh_pong.cxx  zenoh_sub_thr.cxx
bindings/zenoh-python/: pyproject.toml
bindings/zenoh-python/src/: zenoh_ping.py  zenoh_pong.py  zenoh_pub_thr.py  zenoh_sub_thr.py
comparison/: README.md
comparison/cyclonedds/: README.md  cyclonedds.xml
comparison/kafka/: README.md
comparison/kafka/src/kafka_pub_thr/: opts.rs
comparison/kafka/src/kafka_sub_thr/: opts.rs
comparison/mqtt/: README.md
comparison/mqtt/throughput/: mqtt_pub_thr.c
comparison/zenoh/: Cargo.toml  Makefile  README.md
latency/: Cargo.toml
overhead/: Cargo.toml
query/: Cargo.toml
throughput/: Cargo.toml
