#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[workspace]

members = [
  "throughput",
]

[profile.release]
debug=false
lto="fat"
codegen-units=1
opt-level=3
panic="abort"

[workspace.dependencies]
async-std = { version = "1.12.0", features = ["unstable"] }
async-trait = "0.1.66"
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.26"
git-version = "0.3.5"
json5 = "0.4.1"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.8.5"
slab = "0.4.8"
structopt = "0.3.26"
hex = "0.4.3"
serde = "1.0.155"
serde_json = "1.0.94"
zenoh                = { git = "https://github.com/eclipse-zenoh/zenoh.git", version = "0.10.0-dev", default-features = false, features = ["unstable", "transport_tcp", "transport_udp"] }
zenoh-buffers        = { git = "https://github.com/eclipse-zenoh/zenoh.git", version = "0.10.0-dev" }
zenoh-codec          = { git = "https://github.com/eclipse-zenoh/zenoh.git", version = "0.10.0-dev" }
zenoh-config         = { git = "https://github.com/eclipse-zenoh/zenoh.git", version = "0.10.0-dev" }
zenoh-core           = { git = "https://github.com/eclipse-zenoh/zenoh.git", version = "0.10.0-dev" }
zenoh-link           = { git = "https://github.com/eclipse-zenoh/zenoh.git", version = "0.10.0-dev" }
zenoh-protocol       = { git = "https://github.com/eclipse-zenoh/zenoh.git", version = "0.10.0-dev" }
zenoh-transport      = { git = "https://github.com/eclipse-zenoh/zenoh.git", version = "0.10.0-dev" }
zenoh-util           = { git = "https://github.com/eclipse-zenoh/zenoh.git", version = "0.10.0-dev" }
