
#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#
[package]
name = "zenoh-perf-overhead"
version = "0.6.0-dev"
repository = "https://github.com/eclipse-zenoh/zenoh"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "Julien Enoch <julien@enoch.fr>",
           "Olivier Hécart <olivier.hecart@adlinktech.com>",
           "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh: Zero Overhead Pub/sub, Store/Query and Compute."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-std    = { workspace = true }
async-trait  = { workspace = true }
env_logger   = { workspace = true }
hex          = { workspace = true }
log          = { workspace = true }
rand         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
slab         = { workspace = true }
structopt    = { workspace = true }
zenoh        = { workspace = true }
zenoh-util   = { workspace = true }
